# aurum

./: .env.example  .gitignore  Dockerfile  Dockerfile.hf  README.md  alembic.ini  config.yaml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  operations.html  pyproject.toml  techstack.html
.github/workflows/: pages.yml
alembic/: env.py
docs/: benchmarks.md  datasources.html  index.html  mcp.html  operations.html  plan.html  techstack.html
mcp_server/: README.md  server.py
scripts/: benchmark.py  seed_demo_data.py
src/adapters/: base.py  registry.py
src/adapters/market/: alpha_vantage_adapter.py  yfinance_adapter.py
src/agents/: goals_agent.py  graph.py  market_agent.py  news_agent.py  persistence.py  portfolio_agent.py  qa_agent.py  rag.py  state.py  supervisor.py  synthesizer.py  tax_agent.py
src/agents/prompts/: goals.txt  qa.txt  (+6 more)
src/api/: deps.py  main.py  ws.py
src/core/: config.py  database.py  llm.py  logging.py  redis_client.py  security.py
src/models/: __init__.py  chat_trace.py  conversation.py  goal.py  portfolio.py  user.py
src/rag/: chroma_store.py  ingest.py
src/schemas/: admin.py  auth.py  chat.py  goal.py  market.py  portfolio.py  settings.py
tests/: conftest.py
tests/integration/: test_admin_routes.py  test_auth.py  test_goals_route.py  test_health_route.py  test_market_route.py  test_news_route.py  test_portfolio.py  test_portfolio_route.py  test_settings_route.py
tests/unit/: test_adapters.py  test_agents.py  test_alpha_vantage_adapter.py  test_cache.py  test_goals_agent.py  test_llm.py  test_persistence.py  test_portfolio_agent.py  test_pygooglenews_adapter.py  test_rag.py  test_rag_functions.py  test_redis_client.py  test_registry.py  test_security.py  test_supervisor.py  test_synthesizer.py
ui/: index.html  package.json  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
(+76 files in other folders)
